--- a/app/src/main/res/layout/fragment_vote.xml
+++ b/app/src/main/res/layout/fragment_vote.xml
@@ -18,7 +18,7 @@
             android:textSize="12sp"
             android:layout_width="160dp"
             android:layout_height="22dp"
-            android:id="@+id/textView11"
+            android:id="@+id/vote_fragment_flag_tv"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="112dp" android:layout_marginStart="8dp"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="84dp"
