--- a/app/src/main/res/layout/chat_to_row.xml
+++ b/app/src/main/res/layout/chat_to_row.xml
@@ -21,6 +21,7 @@
             android:layout_marginEnd="16dp"
             app:layout_constraintTop_toBottomOf="@+id/row_to_username_time_tv">
         <android.support.constraint.ConstraintLayout
+                android:background="#ccc"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
 
@@ -34,7 +35,7 @@
                     android:text="I don't know either!!! "
                     android:padding="10dp"
                     android:id="@+id/row_to_message_tv"
-                    android:textColor="@color/myblue"
+                    android:textColor="@color/darkBg"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/vote_frament_subject_owner_imageview"
                     android:textSize="16sp"/>
