--- a/app/src/main/res/layout/content_row_1.xml
+++ b/app/src/main/res/layout/content_row_1.xml
@@ -25,9 +25,12 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     android:layout_width="0dp"
                     android:text="Question Title"
+                    android:paddingLeft="5dp"
                     android:layout_height="wrap_content" android:textSize="24sp" android:layout_marginStart="8dp"
-                    android:layout_marginEnd="8dp" android:layout_marginTop="8dp" android:fontFamily="@font/lato_bold"
-                    android:textAllCaps="false" android:id="@+id/content_1_question_title_tv"/>
+                    android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
+
+                    android:textAllCaps="false" android:id="@+id/content_1_question_title_tv"
+                    android:fontFamily="@font/roboto_bold"/>
             <TextView
                     android:text="createtime"
                     android:layout_width="wrap_content"
