--- a/app/src/main/res/layout/row_history_cell.xml
+++ b/app/src/main/res/layout/row_history_cell.xml
@@ -14,12 +14,8 @@
 
 
     <android.support.v7.widget.CardView
-            app:cardUseCompatPadding="true"
-            app:cardElevation="2dp"
-            app:cardCornerRadius="10dp"
-            android:elevation="8dp"
-            android:clipChildren="false"
-            android:clipToPadding="false"
+
+
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/history_compose_cardview"
@@ -29,7 +25,7 @@
             app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
         <android.support.constraint.ConstraintLayout
 
-                android:background="@color/myblue"
+                android:background="@android:color/transparent"
                 android:layout_width="wrap_content"
                 android:clipChildren="false"
                 android:clipToPadding="false"
