--- a/app/src/main/res/layout/content_row_1.xml
+++ b/app/src/main/res/layout/content_row_1.xml
@@ -27,19 +27,19 @@
                     android:text="Question Title"
                     android:paddingLeft="5dp"
                     android:layout_height="wrap_content" android:textSize="24sp" android:layout_marginStart="8dp"
-                    android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
+                    android:layout_marginEnd="8dp" android:layout_marginTop="4dp"
 
                     android:textAllCaps="false" android:id="@+id/content_1_question_title_tv"
                     android:fontFamily="@font/roboto_bold"/>
             <TextView
                     android:text="createtime"
+                    android:paddingLeft="5dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/content_1_create_time_tv" app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginStart="8dp"
-                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
-                    app:layout_constraintTop_toBottomOf="@+id/content_1_question_title_tv"
-                    android:textColor="@android:color/darker_gray"/>
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:textColor="@android:color/darker_gray" android:layout_marginBottom="8dp"/>
             <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" app:srcCompat="@drawable/ic_poll_black_24dp"
