--- a/app/src/main/res/layout/content_row_2.xml
+++ b/app/src/main/res/layout/content_row_2.xml
@@ -29,6 +29,7 @@
 
                 <TextView
                         android:layout_weight="1"
+                        android:gravity="center"
                         android:layout_width="wrap_content"
                         android:text="Option A:"
                         android:textColor="@color/white"
@@ -38,7 +39,7 @@
                         android:id="@+id/content_row_2_option_a_tv"/>
                 <TextView
                         android:layout_weight="1"
-
+                        android:gravity="center"
                         android:text="Option B:"
                         android:textColor="@color/white"
                         android:fontFamily="@font/lato_bold"
@@ -61,6 +62,7 @@
 
                 <TextView
 
+                        android:gravity="center"
                         android:layout_weight="1"
                         android:layout_width="wrap_content"
                         android:text="Option C:"
@@ -70,6 +72,7 @@
                         android:layout_height="wrap_content"
                         android:id="@+id/content_row_2_option_c_tv"/>
                 <TextView
+                        android:gravity="center"
                         android:layout_weight="1"
                         android:layout_width="wrap_content"
                         android:text="Option D:"
